lldpd (0.6.2)
  * Global changes:
    + FreeBSD support.
    + OpenBSD support.
  * Features:
    + Allow to disable LLDP protocol (with `-ll`). In this case, the
      first enabled protocol will be used when no neighbor is detected.
    + Allow to filter debug logs using tokens. Add more debug logs.
    + lldpctl can now output JSON.
    + Use netlink to gather interface information on Linux.
    + Don't use ioctl for bridges anymore on Linux. The configure
      option `--enable-oldies` allow to reenable their uses for
      systems not supporting sysfs.

lldpd (0.6.1)
  * Features:
    + Provide liblldpctl.so, a library to interface with lldpd. The
      documentation is provided through Doxygen. See src/lib/lldpctl.h
      which contains all the exported functions.
    + Make lldpctl uses liblldpctl.so.
    + Add a "watch" option to lldpctl to monitor neighbor changes.
    + Add the possibility to display the current configuration of
      lldpd with lldpctl. Also add the possibility to reset the
      current transmit delay.

lldpd (0.6)
  * Features:
    + Allow lldpctl to display hidden ports.
    + Add a switch to specify interfaces to use to get chassis ID.
    + Support for multiple management addresses and IPv6 management
      addresses. Contributed by João Valverde.
  * Global changes:
    + Switch to libevent. See README.md for details.
    + Partial rewrite of the SNMP part. Less code.
    + Unit tests for SNMP.
    + Major rewrite of the protocol between lldpd and lldpctl. Less
      code.
  * Fixes:
    + Several small SNMP fixes (discovered by unit tests).

lldpd (0.5.7)
 * Fixes:
    + Configure issue with NetSNMP and some linkers
    + Fix infinite loop for the receive part: on certain conditions,
      lldpd will stop sending packets and stop updating local data.

lldpd (0.5.6)
  * Features:
    + Send and receive native VLAN TLV with CDP
    + Add a whitelist for some drivers (currently: dsa and veth)
  * Fixes: